add key stroke to move tab

--- a/viz/templates/viz.html
+++ b/viz/templates/viz.html
@@ -401,6 +401,39 @@ function viz(graph, time_name) {
   $(function () {
     $('#time-step').tab('show')
   })
+  function change_time_step() {
+    console.log("here");
+    var direction = "";
+    switch (window.event.keyCode) {
+        case 37: // left
+            direction = "left";
+            break;
+        case 39: // right
+            direction = "right";
+            break;
+        default:
+            return;
+    }
+    // get current time step
+    var all_times = jQuery('#time-step li');
+    var length = all_times.length;
+    var active = jQuery('#time-step li.active');
+    if (active.length == 0)
+        return;
+    var active = active[0];
+    var time = active.childNodes[0].innerHTML;
+    var time_num = time.match(/Time(\d+)/)[1];
+    var next_time_num= time_num + 1;
+    if (direction == "left") {
+        next_time_num = time_num - 1;
+    }
+    if (next_time_num >= all_times.length ||
+        next_time_num < 0) {
+        return;
+    }
+    $('#time-step a[href="#Time'+next_time_num+'"]').tab('show');
+  }
+  document.onkeydown = change_time_step;
 </script>
 
   </body>
